[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## eth
ethers.workspace = true
opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
mev-share = { version = "0.1.4", git = "https://github.com/paradigmxyz/mev-share-rs.git" }
mev-share-sse = { version = "0.1.4", git = "https://github.com/paradigmxyz/mev-share-rs.git" }
mev-share-rpc-api = { version = "0.1.4", git = "https://github.com/paradigmxyz/mev-share-rs.git" }
ethers-flashbots = { git = "https://github.com/FrankieIsLost/ethers-flashbots", features = ["rustls"] }

## async
async-trait = "0.1.64"
futures = "0.3"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
jsonrpsee = { version = "0.18", features = ["client", "async-client"] }

## misc
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
tower = "0.4.13"
